--- a/CPAngular2.Portal/Application/Customer/dienst-selector.html
+++ b/CPAngular2.Portal/Application/Customer/dienst-selector.html
@@ -1,25 +1,37 @@
 ﻿<div class="input_fields_wrap">
     <div class="row">
-        <div class="controls  col-md-6">
+        <div class="col-md-6">
             <div class="checkbox">
-                <label><input type="checkbox" name="item" value="" >Tagdienste</label>
+                <label><input type="checkbox" name="dienstType" value="Tagdienste">Tagdienste</label>
             </div>
         </div>
-        <div class="controls  col-md-6">
+        <div class="col-md-6">
             <div class="checkbox">
-                <label><input type="checkbox" name="item" value="" >Spätdienste</label>
+                <label><input type="checkbox" name="dienstType" value="Spätdienste">Spätdienste</label>
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="controls  col-md-6">
+        <div class="col-md-6">
             <div class="checkbox">
-		<label><input type="checkbox" name="item" value="" >Nachtdienste</label>
+                <label><input type="checkbox" name="dienstType" value="Nachtdienste">Nachtdienste</label>
             </div>
         </div>
-        <div class="controls  col-md-6">
+        <div class="col-md-6">
             <div class="checkbox">
-                <label><input type="checkbox" name="item" value="" >Wochenende</label>
+                <label><input type="checkbox" name="dienstType" value="Wochenende">Wochenende</label>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="checkbox">
+                <label><input type="checkbox" name="dienstType" value="Feiertage">Feiertage</label>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="checkbox">
+                <label><input type="checkbox" name="dienstType" value="Oder">Oder</label>
             </div>
         </div>
     </div>
