--- a/CPAngular2.Portal/Application/Customer/cludge.html
+++ b/CPAngular2.Portal/Application/Customer/cludge.html
@@ -3,6 +3,6 @@
         <div class="controls form-group col-md-2">
             <input type="checkbox" class="checkbox-inline" />Bundeswelt
         </div>
-        <div class="controls form-group col-md-10"><button type="button" class="btn btn-success btn-primary btn-lg add_field_button">Add Area</button></div>
+        <div class="controls form-group col-md-10"><button type="button" class="btn btn-success btn-primary add_field_button">Add Area</button></div>
     </div>
 </div>
