--- a/CPAngular2.Portal/Application/Customer/dienst-selector.html
+++ b/CPAngular2.Portal/Application/Customer/dienst-selector.html
@@ -34,7 +34,7 @@
                 <label><input type="checkbox" name="dienstType" value="Oder" [(ngModel)]="showDienstOder">Oder</label>
             </div>
             <div *ngIf="showDienstOder">
-                <input type="text" class="form-control" [(ngModel)]="dienstOther" />
+                <input type="text" class="form-control" [(ngModel)]="dienstOder" />
             </div>
         </div>
     </div>
